--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.4 Arm 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.4 Arm 平台上编译.md
@@ -10,11 +10,11 @@
 
 ## 1 硬件/操作系统环境
 
-* 系统版本：CentOS 7.9、Ubuntu 20.04
+* 系统版本： `CentOS 7.9` 、 `Ubuntu 20.04`
 
-* 系统架构：ARM64
+* 系统架构： `ARM64`
 
-* 内存：16 GB +
+* 内存： `16 GB +`
 
 ## 2 软件环境配置
 
@@ -263,7 +263,7 @@ export USE_UNWIND=OFF
     /opt/doris/env.sh: line 46: python: command not found
     ```
 
-    问题可能原因：系统默认使用 `python2.7` 、 `python3.6` 、`python2` 、`python3` 这几个命令来执行 `python` 命令， `Doris` 安装依赖需要 `python 2.7+` 版本即可，故只需要添加名为 `python` 的命令连接即可，使用版本 `2` 和版本 `3` 的都可以。
+    问题可能原因：系统默认使用 `python2.7` 、 `python3.6` 、 `python2` 、 `python3` 这几个命令来执行 `python` 命令， `Doris` 安装依赖需要 `python 2.7+` 版本即可，故只需要添加名为 `python` 的命令连接即可，使用版本 `2` 和版本 `3` 的都可以。
 
     解决方案：建立 `\usr\bin` 中 `python` 命令的软连接，比如：
 
