--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.1 手动部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.1 手动部署.md
@@ -14,7 +14,7 @@
 
 !!! tip
 
-    如果需要部署存算分离模式，在完成上述 `1` `2` `3` 步之后， 参考以下链接继续完成存算分离模式部署
+    如果需要部署存算分离模式，在完成上述 `1` `2` `3` 步之后，参考以下链接继续完成存算分离模式部署
 
     1. 存算分离部署前准备
     
@@ -116,9 +116,9 @@ cat /proc/cpuinfo | grep avx2
 
 `Doris` 的所有进程都依赖 `Java` 。
 
-在 `2.1` （含）版本之前，请使用 `Java 8` ，推荐版本：`openjdk-8u352-b08-linux-x64` 。
+在 `2.1` （含）版本之前，请使用 `Java 8` ，推荐版本： `openjdk-8u352-b08-linux-x64` 。
 
-从 `3.0` （含）版本之后，请使用 `Java 17` ，推荐版本：`jdk-17.0.10_linux-x64_bin.tar.gz` 。
+从 `3.0` （含）版本之后，请使用 `Java 17` ，推荐版本： `jdk-17.0.10_linux-x64_bin.tar.gz` 。
 
 ## 2 操作系统检查
 
@@ -258,7 +258,7 @@ ln -s <doris_meta_original> <doris_meta_created>
 
 **修改 FE 配置文件**
 
-`FE` 的配置文件在 `FE` 部署路径下的 `conf` 目录中，启动 `FE` 节点前需要修改 `conf/fe.conf`。
+`FE` 的配置文件在 `FE` 部署路径下的 `conf` 目录中，启动 `FE` 节点前需要修改 `conf/fe.conf` 。
 
 1. 修改 `FE` 元数据目录
 
@@ -351,7 +351,7 @@ ALTER SYSTEM ADD OBSERVER "<fe_ip_address>:<fe_edit_log_port>"
 
     注意
 
-    1. `FE Follower`（包括 `Master` ）节点的数量建议为奇数，建议部署 `3` 个组成高可用模式。
+    1. `FE Follower` （包括 `Master` ）节点的数量建议为奇数，建议部署 `3` 个组成高可用模式。
     
     2. 当 `FE` 处于高可用部署时（ `1` 个 `Master` ， `2` 个 `Follower` ），我们建议通过增加 `Observer FE` 来扩展 `FE` 的读服务能力
     
@@ -365,11 +365,11 @@ ALTER SYSTEM ADD OBSERVER "<fe_ip_address>:<fe_edit_log_port>"
 bin/start_fe.sh --helper <helper_fe_ip>:<fe_edit_log_port> --daemon
 ```
 
-其中， `helper_fe_ip` 为当前 `FE` 集群中任一存活的节点。`--heper` 参数只应用于第一次启动 `FE` 时同步元数据，后续重启 `FE` 的操作不需要指定。
+其中， `helper_fe_ip` 为当前 `FE` 集群中任一存活的节点。 `--heper` 参数只应用于第一次启动 `FE` 时同步元数据，后续重启 `FE` 的操作不需要指定。
 
 **判断 follower 节点状态**
 
-与判断 `FE master` 节点状态的方式相同，添加注册 `FE follower` 节点后需要通过 `show frontends` 命令查看 `FE` 节点状态。与 `Master` 状态不同，`IsMaster` 的状态应为 `false` 。
+与判断 `FE master` 节点状态的方式相同，添加注册 `FE follower` 节点后需要通过 `show frontends` 命令查看 `FE` 节点状态。与 `Master` 状态不同， `IsMaster` 的状态应为 `false` 。
 
 ### 4.3 部署 BE
 
@@ -397,13 +397,13 @@ mkdir -p <be_storage_root_path>
 
 2. 配置 `BE` 存储路径
 
-    如需修改 `BE` 的存储路径，可以修改 `storage_root_path` 参数。在多路径之间使用英文分号 `;` 分隔 （最后一个目录不要加分号）。
+    如需修改 `BE` 的存储路径，可以修改 `storage_root_path` 参数。在多路径之间使用英文分号 `;` 分隔（最后一个目录不要加分号）。
 
     **冷热数据分级存储**
 
     `Doris` 支持冷热数据分级存储，将冷数据存储在 `HDD` 或对象存储中，热数据存储在 `SSD` 中。
 
-    可以通过路径区别节点内的冷热数据存储目录， `HDD` （冷数据目录）或 `SSD` （热数据目录）。如果不需要 `BE` 注意： 节点内的冷热机制，那么只需要配置路径即可，无需指定 `medium` 类型；也不需要修改 `FE` 的默认存储介质配置。
+    可以通过路径区别节点内的冷热数据存储目录， `HDD` （冷数据目录）或 `SSD` （热数据目录）。如果不需要 `BE` 注意：节点内的冷热机制，那么只需要配置路径即可，无需指定 `medium` 类型；也不需要修改 `FE` 的默认存储介质配置。
 
     在使用冷热数据分离功能时，需要在 `storage_root_path` 中使用 `medium` 选项。
 
@@ -598,7 +598,7 @@ server1:apache-doris/fe doris$ curl http://127.0.0.1:8030/api/bootstrap
 
 `Doris FE` 内置 `Web UI` 。用户无须安装 `MySQL` 客户端，即可通过 `Web UI` 来完成诸如添加 `BE/FE` 节点，以及运行其它 `SQL` 查询。
 
-在浏览器中输入 `http://fe_ip:fe_port` , 比如 `http://172.20.63.118:8030`，打开 `Doris` 内置的 `Web` 控制台。
+在浏览器中输入 `http://fe_ip:fe_port` ，比如 `http://172.20.63.118:8030` ，打开 `Doris` 内置的 `Web` 控制台。
 
 内置 `Web` 控制台，主要供集群 `root` 账户使用，默认安装后 `root` 账户密码为空。
 
@@ -614,7 +614,7 @@ ALTER SYSTEM ADD BACKEND "be_host_ip:heartbeat_service_port";
 
 !!! tip
 
-    `Playground` 中执行这种和具体数据库/表没有关系的语句，务必在左侧库栏里随意选择一个数据库，才能执行成功，这个限制，稍后会去掉。
+    `Playground` 中执行这种和具体数据库表没有关系的语句，务必在左侧库栏里随意选择一个数据库，才能执行成功，这个限制，稍后会去掉。
 
 ### 5.5 通过 Web UI 无法修改 root 密码
 
