--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.2 Docker 部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.2 Docker 部署.md
@@ -59,7 +59,7 @@ Docker Version： `20.10` 及以后版本
 
 2. 下载二进制包
 
-    下载官方二进制包/编译的二进制包，然后覆盖 `./docker-build/fe/resource` 中的 `apache-doris` 安装包。
+    下载官方二进制包编译的二进制包，然后覆盖 `./docker-build/fe/resource` 中的 `apache-doris` 安装包。
 
 3. 编写 `Dockerfile`
 
@@ -93,7 +93,7 @@ Docker Version： `20.10` 及以后版本
 
 4. 执行构建
 
-    需要注意的是，`${tagName}` 需替换为你想要打包命名的 `tag` 名称，如：`apache-doris:2.0.3-fe`
+    需要注意的是， `${tagName}` 需替换为你想要打包命名的 `tag` 名称，如： `apache-doris:2.0.3-fe`
 
     ```shell
     cd ./docker-build/fe
@@ -223,11 +223,11 @@ sysctl -w vm.max_map_count=2000000
 
 !!! tip
 
-    * `FE_SERVERS` 接口规则为：`FE_NAME:FE_HOST:FE_EDIT_LOG_PORT[,FE_NAME:FE_HOST:FE_EDIT_LOG_PORT]`
+    * `FE_SERVERS` 接口规则为： `FE_NAME:FE_HOST:FE_EDIT_LOG_PORT[,FE_NAME:FE_HOST:FE_EDIT_LOG_PORT]`
     
-    * `FE_ID` 接口规则为：`1-9` 的整数，其中 `1` 号 `FE` 为 `Master` 节点。
+    * `FE_ID` 接口规则为： `1-9` 的整数，其中 `1` 号 `FE` 为 `Master` 节点。
     
-    * `BE_ADDR` 接口规则为：`BE_HOST:BE_HEARTBEAT_SERVICE_PORT`
+    * `BE_ADDR` 接口规则为： `BE_HOST:BE_HEARTBEAT_SERVICE_PORT`
     
     * `NODE_ROLE` 接口规则为： `computation` 或为空，其中为空或为其他值时表示节点类型为 `mix` 类型
     
