--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.1 快速部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.1 快速部署.md
@@ -1,6 +1,6 @@
 # 1.2.3.2.1 快速部署
 
-本章节介绍如何在测试 `Kubernetes` 集群中部署 `Doris Operator` 与 `Doris` 集群。 部署操作如下：
+本章节介绍如何在测试 `Kubernetes` 集群中部署 `Doris Operator` 与 `Doris` 集群。部署操作如下：
 
 1. 创建 `Kubernetes` 测试集群
 
@@ -44,7 +44,7 @@
     You can now use your cluster with:
     ```
 
-3. 检查 `Kubernetes` 集群状态使用以下命令检查 `Kubernete` 集群状态:
+3. 检查 `Kubernetes` 集群状态使用以下命令检查 `Kubernete` 集群状态：
 
     ```shell
     kubectl cluster-info --context kind-test-doris
@@ -68,7 +68,7 @@
     kubectl create -f https://raw.githubusercontent.com/selectdb/doris-operator/master/config/crd/bases/doris.selectdb.com_dorisclusters.yaml
     ```
 
-    期望输出结果:
+    期望输出结果：
 
     ```shell
     customresourcedefinition.apiextensions.k8s.io/dorisclusters.doris.selectdb.com created
@@ -98,7 +98,7 @@
     kubectl get pods -n doris
     ```
 
-    期望输出结果:
+    期望输出结果：
 
     ```shell
     NAME                              READY   STATUS    RESTARTS   AGE
@@ -121,7 +121,7 @@
     kubectl apply -f doriscluster-sample.yaml
     ```
 
-3. 检查集群部署状态： 通过查看 `pods` 的状态检查集群的状态：
+3. 检查集群部署状态：通过查看 `pods` 的状态检查集群的状态：
 
     ```shell
     kubectl get pods
@@ -152,7 +152,7 @@
 
 在测试环境中快速部署的 `Doris` 集群，可以进入容器 `FE` 内部使用 `MySQL Client` 链接 `Doris` 进行测试操作。其他访问方式可参考集群配置访问章节配置使用。
 
-1. 获取 `FE` 容器名称:
+1. 获取 `FE` 容器名称：
 
     ```shell
     kubectl get pod -n doris | grep fe
@@ -161,7 +161,7 @@
 
     在本例中， `FE` 容器名为 `doriscluster-sample-fe-0` 。
 
-2. 进入 `FE` 容器内部:
+2. 进入 `FE` 容器内部：
 
     ```shell
     kubectl -n doris exec -it doriscluster-sample-fe-0 /bin/bash
