--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.3 配置 Doris 集群.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.3 配置 Doris 集群.md
@@ -79,7 +79,7 @@ spec:
 
 **BE 计算资源设定**
 
-默认部署的 `BE` 计算资源为 `8c` `16Gi` , 将计算资源修改为 `16c` `32Gi` 配置如下：
+默认部署的 `BE` 计算资源为 `8c` `16Gi` ，将计算资源修改为 `16c` `32Gi` 配置如下：
 
 ```shell
 spec:
@@ -149,7 +149,7 @@ spec:
     kubectl -n ${namespace} apply -f ${feConfigMapFile}.yaml
     ```
 
-    `${namespace}` 为 `DorisCluster` 资源需要部署到的 `namespace` ，`${feConfigMapFile}` 为 `fe` 使用的 `configMap` 文件名称。
+    `${namespace}` 为 `DorisCluster` 资源需要部署到的 `namespace` ， `${feConfigMapFile}` 为 `fe` 使用的 `configMap` 文件名称。
 
 2. 配置 `DorisCluster` 资源
 
@@ -215,7 +215,7 @@ spec:
     kubectl -n ${namespace} apply -f ${beConfigMapFile}.yaml
     ```
 
-    `${namespace}` 为 `DorisCluster` 资源需要部署到的 `namespace` ，`${beConfigMapFile}` 为 `configMap` 文件名称。
+    `${namespace}` 为 `DorisCluster` 资源需要部署到的 `namespace` ， `${beConfigMapFile}` 为 `configMap` 文件名称。
 
 2. 配置 `DorisCluster` 资源
 
@@ -239,7 +239,7 @@ spec:
 
 **FE 挂载多 ConfigMap**
 
-以下为将名称为 `test-fe1` , `test-fe2` 的 `ConfigMap` 分别挂载到 `FE` 容器 `/etc/fe/config1/` 和 `/etc/fe/config2` 目录下的配置样例：
+以下为将名称为 `test-fe1` ， `test-fe2` 的 `ConfigMap` 分别挂载到 `FE` 容器 `/etc/fe/config1/` 和 `/etc/fe/config2` 目录下的配置样例：
 
 ```shell
 spec:
@@ -253,7 +253,7 @@ spec:
 
 **BE 挂载多 ConfigMap**
 
-以下为将名称为 `test-be1` , `test-be2` 的 `ConfigMap` 分别挂载到 `BE` 容器 `/etc/be/config1/` 和 `/etc/be/config2` 目录下的配置样例：
+以下为将名称为 `test-be1` ， `test-be2` 的 `ConfigMap` 分别挂载到 `BE` 容器 `/etc/be/config1/` 和 `/etc/be/config2` 目录下的配置样例：
 
 ```shell
 spec:
@@ -294,7 +294,7 @@ spec:
             storage: ${storageSize}
 ```
 
-上述配置中, `${your_storageclass}` 表示希望使用的 `StorageClass` 名称, `${storageSize}` 表示希望使用的存储大小，`${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式, 比如： `100Gi` 。请在使用时按需替换。
+上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
 **FE 日志持久化配置**
 
@@ -317,7 +317,7 @@ spec:
             storage: ${storageSize}
 ```
 
-上述配置中, `${your_storageclass}` 表示希望使用的 `StorageClass` 名称, `${storageSize}` 表示希望使用的存储大小，`${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式, 比如： `100Gi` 。请在使用时按需替换。
+上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
 !!! tip
 
@@ -347,11 +347,11 @@ spec:
             storage: ${storageSize}
     ```
 
-    上述配置中, `${your_storageclass}` 表示希望使用的 `StorageClass` 名称, `${storageSize}` 表示希望使用的存储大小，`${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式, 比如： `100Gi` 。请在使用时按需替换。
+    上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
 * `BE` 配置多个持久化存储目录
 
-    `Doris` 为充分利用多磁盘的优势提供可配置多个存储目录。如果在定制化配置中通过 `storage_root_path` 指定了多个存储目录，在需要部署的 `DorisCluster` 资源的 `BE` 配置中增加多个存储配置。例如：`storage_root_path=/home/disk1/doris.HDD;/home/disk2/doris.SSD` , 则需要在部署资源中添加如下配置：
+    `Doris` 为充分利用多磁盘的优势提供可配置多个存储目录。如果在定制化配置中通过 `storage_root_path` 指定了多个存储目录，在需要部署的 `DorisCluster` 资源的 `BE` 配置中增加多个存储配置。例如： `storage_root_path=/home/disk1/doris.HDD;/home/disk2/doris.SSD` ，则需要在部署资源中添加如下配置：
 
     ```shell
     beSpec:
@@ -376,7 +376,7 @@ spec:
             storage: ${storageSize}
     ```
 
-    上述配置中, `${your_storageclass}` 表示希望使用的 `StorageClass` 名称, `${storageSize}` 表示希望使用的存储大小，`${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式, 比如： `100Gi` 。请在使用时按需替换。
+    上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
 **BE 持久化日志**
 
@@ -396,11 +396,11 @@ beSpec:
           storage: ${storageSize}
 ```
 
-上述配置中, `${your_storageclass}` 表示希望使用的 `StorageClass` 名称, `${storageSize}` 表示希望使用的存储大小，`${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式, 比如： `100Gi` 。请在使用时按需替换。
+上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
 ## 4 访问配置
 
-`Kubernetes` 提供使用 `Service` 方式作为 `vip` 和负载均衡器， `Service` 有三种对外暴漏模式 `ClusterIP` 、 `NodePort` 、 `LoadBalancer` .
+`Kubernetes` 提供使用 `Service` 方式作为 `vip` 和负载均衡器， `Service` 有三种对外暴漏模式 `ClusterIP` 、 `NodePort` 、 `LoadBalancer` 。
 
 ### 4.1 ClusterIP
 
@@ -626,7 +626,7 @@ beSpec:
 
 1. 构建 `root` 加密密码
 
-    `Doris` 支持密文的方式在 `FE` 的配置文件中设置 `root` 用户的密码，密码的加密方式是采用 `2` 阶段 `SHA-1` 加密实现。代码实现如下:
+    `Doris` 支持密文的方式在 `FE` 的配置文件中设置 `root` 用户的密码，密码的加密方式是采用 `2` 阶段 `SHA-1` 加密实现。代码实现如下：
 
     `Java` 代码实现 `2` 阶段 `SHA-2` 加密：
 
@@ -671,11 +671,11 @@ beSpec:
     }
     ```
 
-    将加密后的密码按照配置文件格式要求配置到 `fe.conf` 中， 根据集群参数配置章节的介绍将配置文件以 `configmap` 的形式下发到 `K8s` 集中。
+    将加密后的密码按照配置文件格式要求配置到 `fe.conf` 中，根据集群参数配置章节的介绍将配置文件以 `configmap` 的形式下发到 `K8s` 集中。
 
 2. 构建 `DorisCluster` 资源
 
-    配置文件设置了 `root` 初始化密码， `Doris FE` 第一个节点启动后 `root` 的密码会立即生效，其他节点加入集群需要 `Doris Operator` 使用 `root` 用户名 + 密码的方式来操作。需要在部署的 `DorisCluster` 资源中指定用户名 + 密码，以便 `Doris Operator` 自动管理集群节点。
+    配置文件设置了 `root` 初始化密码， `Doris FE` 第一个节点启动后 `root` 的密码会立即生效，其他节点加入集群需要 `Doris Operator` 使用 `root` 用户名密码的方式来操作。需要在部署的 `DorisCluster` 资源中指定用户名密码，以便 `Doris Operator` 自动管理集群节点。
 
     * 环境变量方式
 
@@ -688,7 +688,7 @@ beSpec:
             password: ${password}
         ```
 
-        其中，`${password}` 为 `root` 的非加密密码。
+        其中， `${password}` 为 `root` 的非加密密码。
 
     * `Secret` 方式
 
@@ -706,7 +706,7 @@ beSpec:
 
             其中 `${password}` 为 `root` 设置的非加密密码。
 
-            将 `Secret` 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将更新后的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间，`${secretFileName}` 为需要部署的 `Secret` 的文件名称。
+            将 `Secret` 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将更新后的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间， `${secretFileName}` 为需要部署的 `Secret` 的文件名称。
 
         * 配置需要部署的 `DorisCluster` 资源
 
@@ -717,11 +717,11 @@ beSpec:
             authSecret: ${secretName}
             ```
 
-            其中，`${secretName}` 为包含 `root` 用户名和密码的 `Secret` 名称。
+            其中， `${secretName}` 为包含 `root` 用户名和密码的 `Secret` 名称。
 
 ### 5.2 部署时自动创建非 root 管理用户和密码（推荐）
 
-在首次部署时不设置 `root` 的初始化密码，通过环境变量或者 `Secret` 的方式设置非 `root` 用户和登录密码。 `Doris` 容器的辅助服务会自动在数据库中创建配置的用户，设置密码和赋予 `Node_priv` 权限, `Doris Operator` 会以自动创建的用户名和密码管理集群节点。
+在首次部署时不设置 `root` 的初始化密码，通过环境变量或者 `Secret` 的方式设置非 `root` 用户和登录密码。 `Doris` 容器的辅助服务会自动在数据库中创建配置的用户，设置密码和赋予 `Node_priv` 权限， `Doris Operator` 会以自动创建的用户名和密码管理集群节点。
 
 * 环境变量模式
 
@@ -734,7 +734,7 @@ beSpec:
         password: ${DB_ADMIN_PASSWD}
     ```
 
-    其中，`${DB_ADMIN_USER}` 为需要新建拥有管理权限的用户名，`${DB_ADMIN_PASSWD}` 为新建用户的密码。
+    其中， `${DB_ADMIN_USER}` 为需要新建拥有管理权限的用户名， `${DB_ADMIN_PASSWD}` 为新建用户的密码。
 
 * `Secret` 方式
 
@@ -748,7 +748,7 @@ beSpec:
         password: ${DB_ADMIN_PASSWD}
         ```
 
-        其中 `${DB_ADMIN_USER}` 为新创建的用户名，`${DB_ADMIN_PASSWD}` 为新建用户名设置的密码。 将 Secret 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将更新后的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间，`${secretFileName}` 为需要部署的 `Secret` 的文件名称。
+        其中 `${DB_ADMIN_USER}` 为新创建的用户名， `${DB_ADMIN_PASSWD}` 为新建用户名设置的密码。将 Secret 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将更新后的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间， `${secretFileName}` 为需要部署的 `Secret` 的文件名称。
   
     * 配置需要使用 `Secret` 的 `DorisCluster` 资源
 
@@ -759,7 +759,7 @@ beSpec:
         authSecret: ${secretName}
         ```
 
-        其中，`${secretName}` 为部署的 `Basic authentication Secret` 的名称。
+        其中， `${secretName}` 为部署的 `Basic authentication Secret` 的名称。
 
 !!! tip
 
@@ -767,7 +767,7 @@ beSpec:
 
 ### 5.3 集群部署后设置 root 用户密码
 
-`Doris` 集群在部署后设置了 `root` 用户的密码，需要配置一个拥有 `Node_priv` 权限的用户到 `DorisCluster` 资源中，以便 `Doris Operator` 自动化的管理集群节点。此用户名不建议使用 `root` ， 请参考用户新建和权限赋值章节来创建新用户并赋予 `Node_priv` 权限。创建用户后，通过环境变量或者 `Secret` 的方式指定新的管理用户和密码，并配置对应的 `DorisCluster` 资源。
+`Doris` 集群在部署后设置了 `root` 用户的密码，需要配置一个拥有 `Node_priv` 权限的用户到 `DorisCluster` 资源中，以便 `Doris Operator` 自动化的管理集群节点。此用户名不建议使用 `root` ，请参考用户新建和权限赋值章节来创建新用户并赋予 `Node_priv` 权限。创建用户后，通过环境变量或者 `Secret` 的方式指定新的管理用户和密码，并配置对应的 `DorisCluster` 资源。
 
 1. 新建拥有 `Node_priv` 权限用户
 
@@ -777,7 +777,7 @@ beSpec:
     CREATE USER '${DB_ADMIN_USER}' IDENTIFIED BY '${DB_ADMIN_PASSWD}';
     ```
 
-    其中 `${DB_ADMIN_USER}` 为希望创建的用户名，`${DB_ADMIN_PASSWD}` 为希望为新建用户设置的密码。
+    其中 `${DB_ADMIN_USER}` 为希望创建的用户名， `${DB_ADMIN_PASSWD}` 为希望为新建用户设置的密码。
 
 2. 给新建用户赋予 `Node_priv` 权限
 
@@ -787,7 +787,7 @@ beSpec:
     GRANT NODE_PRIV ON *.*.* TO ${DB_ADMIN_USER};
     ```
 
-    其中，`${DB_ADMIN_USER}` 为新创建的用户名。
+    其中， `${DB_ADMIN_USER}` 为新创建的用户名。
 
     新建用户，设置密码，以及赋予权限详细使用，请参考官方文档 `CREATE-USER` 部分。
 
@@ -804,7 +804,7 @@ beSpec:
             password: ${DB_ADMIN_PASSWD}
         ```
 
-        其中，`${DB_ADMIN_USER}` 为新建的用户名，`${DB_ADMIN_PASSWD}` 为新建用户设置的密码。
+        其中， `${DB_ADMIN_USER}` 为新建的用户名， `${DB_ADMIN_PASSWD}` 为新建用户设置的密码。
 
     * `Secret` 方式
 
@@ -818,9 +818,9 @@ beSpec:
             password: ${DB_ADMIN_PASSWD}
             ```
 
-            其中 `${DB_ADMIN_USER}` 为新创建的用户名，`${DB_ADMIN_PASSWD}` 为新建用户名设置的密码。
+            其中 `${DB_ADMIN_USER}` 为新创建的用户名， `${DB_ADMIN_PASSWD}` 为新建用户名设置的密码。
 
-            将 `Secret` 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将配置好的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间，`${secretFileName}` 为需要部署的 `Secret` 的文件名称。
+            将 `Secret` 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将配置好的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间， `${secretFileName}` 为需要部署的 `Secret` 的文件名称。
 
         * 更新需要使用 `Secret` 的 `DorisCluster` 资源
 
@@ -831,7 +831,7 @@ beSpec:
             authSecret: ${secretName}
             ```
 
-            其中，`${secretName}` 为部署的 `Basic authentication Secret` 的名称。
+            其中， `${secretName}` 为部署的 `Basic authentication Secret` 的名称。
 
 !!! tip
 
