--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
@@ -2,7 +2,7 @@
 
 ## 1 服务 Crash 情况下如何进入容器
 
-在 `K8s` 环境中服务因为一些预期之外的事情会进入 `CrashLoopBackOff` 状态，通过 `kubectl get pod --namespace ${namespace}` 命令可以查看指定 `namespace` 下的 `pod` 状态和 `pod_name` 。 在这种状态下，单纯通过 `describe` 和 `logs` 命令无法判定服务出问题的原因。当服务进入 `CrashLoopBackOff` 状态时，需要有一种机制允许部署服务的 `pod` 进入 `running` 状态方便用户通过 `exec` 进入容器内进行 `debug` 。
+在 `K8s` 环境中服务因为一些预期之外的事情会进入 `CrashLoopBackOff` 状态，通过 `kubectl get pod --namespace ${namespace}` 命令可以查看指定 `namespace` 下的 `pod` 状态和 `pod_name` 。在这种状态下，单纯通过 `describe` 和 `logs` 命令无法判定服务出问题的原因。当服务进入 `CrashLoopBackOff` 状态时，需要有一种机制允许部署服务的 `pod` 进入 `running` 状态方便用户通过 `exec` 进入容器内进行 `debug` 。
 
 `Doris Operator` 提供了 `Debug` 的运行模式，下面描述了当服务进入 `CrashLoopBackOff` 时如何进入 `Debug` 模式进行人工 `Debug` ，以及解决后如何恢复到正常启动状态。
 
@@ -40,9 +40,9 @@ kubectl delete pod ${pod_name} --namespace ${namespace}
 
     进入 `pod` 内部后，需要修改配置文件的端口信息，才能手动启动相应的 `Doris` 组件
 
-    * `FE` 需要修改默认路径为：`/opt/apache-doris/fe/conf/fe.conf` 的 `query_port=9030` 配置。
+    * `FE` 需要修改默认路径为： `/opt/apache-doris/fe/conf/fe.conf` 的 `query_port=9030` 配置。
     
-    * `BE` 需要修改默认路径为：`/opt/apache-doris/be/conf/be.conf` 的 `heartbeat_service_port=9050` 配置。
+    * `BE` 需要修改默认路径为： `/opt/apache-doris/be/conf/be.conf` 的 `heartbeat_service_port=9050` 配置。
 
 ## 2 服务扩缩容
 
@@ -50,7 +50,7 @@ kubectl delete pod ${pod_name} --namespace ${namespace}
 
 ### 2.1 获取 DorisCluster 资源
 
-使用命令 `kubectl --namespace {namespace} get doriscluster` 获取已部署 `DorisCluster` （简称 `dcr` ） 资源的名称。本文中，我们以 `doris` 为 `namespace` .
+使用命令 `kubectl --namespace {namespace} get doriscluster` 获取已部署 `DorisCluster` （简称 `dcr` ）资源的名称。本文中，我们以 `doris` 为 `namespace` 。
 
 ```shell
 $ kubectl --namespace doris get doriscluster
@@ -244,7 +244,7 @@ doriscluster-sample   available   available
 
 **验证集群节点状态**
 
-通过访问 `Doris` 集群文档提供的方式，通过 `mysql-client` 访问 `Doris` 。 使用 `show frontends` 和 `show backends` 等 `SQL` 查看各个组件的版本和状态。
+通过访问 `Doris` 集群文档提供的方式，通过 `mysql-client` 访问 `Doris` 。使用 `show frontends` 和 `show backends` 等 `SQL` 查看各个组件的版本和状态。
 
 ```sql
 mysql> show frontends\G;
