--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.1 快速部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.1 快速部署.md
@@ -1,6 +1,6 @@
 # 1.2.3.3.1 快速部署
 
-在 `K8s` 上部署存算分离集群需要提前部署好 `FDB` 。如果是虚机部署需确保部署的虚机能够被 `K8s` 集群上的服务访问，部署请参考存算分离部署文档中部署前准备阶段介绍；如需要在 `K8s` 上部署请参考 `FDB` 在 `K8s` 上部署。 部署 `Doris` 存算分离集群分为两部分： `Doris-Operator` 及其相关依赖权限部署； `Doris` 存算分离集群定制化资源部署。
+在 `K8s` 上部署存算分离集群需要提前部署好 `FDB` 。如果是虚机部署需确保部署的虚机能够被 `K8s` 集群上的服务访问，部署请参考存算分离部署文档中部署前准备阶段介绍；如需要在 `K8s` 上部署请参考 `FDB` 在 `K8s` 上部署。部署 `Doris` 存算分离集群分为两部分： `Doris-Operator` 及其相关依赖权限部署； `Doris` 存算分离集群定制化资源部署。
 
 ## 1 部署 Operator
 
@@ -33,7 +33,7 @@
 
 ## 2 快速部署存算分离集群
 
-1. 下载 `ddc-sample.yaml` 部署样例:
+1. 下载 `ddc-sample.yaml` 部署样例：
 
     ```shell
     curl -O https://raw.githubusercontent.com/apache/doris-operator/master/doc/examples/disaggregated/cluster/ddc-sample.yaml
@@ -59,7 +59,7 @@
 
 ## 3 创建远程存储后端
 
-存算分离集群搭建完毕后，需要通过客户端执行相应的 `CREATE STORAGE VAULT` SQL语句创建存储后端来实现数据的持久化。 集群访问方式可参考访问 `Doris` 集群来连接 `Doris` 集群，下文提供其中一种实现方式。
+存算分离集群搭建完毕后，需要通过客户端执行相应的 `CREATE STORAGE VAULT` SQL语句创建存储后端来实现数据的持久化。集群访问方式可参考访问 `Doris` 集群来连接 `Doris` 集群，下文提供其中一种实现方式。
 
 1. 获取 `Service`
 
@@ -96,7 +96,7 @@
 
 3. 创建存储后端
 
-    创建语句语法，具体参考管理 `Storage Vault` 。 这里提供 `S3` 协议对象存储的示例：
+    创建语句语法，具体参考管理 `Storage Vault` 。这里提供 `S3` 协议对象存储的示例：
 
     1. 创建 `S3 Storage Vault`
 
