--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.3 配置部署 Metaservice.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.3 配置部署 Metaservice.md
@@ -51,7 +51,7 @@ spec:
         namespace: {namespace}
 ```
 
-若 `FDB` 是物理机部署，则可以通过为 `metaService` 配置 `FDB endpoint`（ `FDB` 的访问字符串）的方式来实现 `FDB` 的访问。 配置如下：
+若 `FDB` 是物理机部署，则可以通过为 `metaService` 配置 `FDB endpoint` （ `FDB` 的访问字符串）的方式来实现 `FDB` 的访问。配置如下：
 
 ```shell
 spec:
@@ -67,7 +67,7 @@ spec:
 
 使用 `ConfigMap` 挂载配置文件部署 `MS` 服务：
 
-`ConfigMap` :
+`ConfigMap` ：
 
 ```shell
 apiVersion: v1
@@ -111,7 +111,7 @@ spec:
       mountPath: /etc/doris
 ```
 
-实际部署中，按照需要配置 `ConfigMap` 的名称以及命名空间，并将配置信息按照上述样例格式配置到需要部署的存算分离元数据管理资源中。 `MS` 服务使用的启动配置文件名称 `doris_cloud.conf` ， 因此挂载启动配置的 `ConfigMap` 的 `key` 也必须是 `doris_cloud.conf` 。启动配置必须挂载到 `/etc/doris` 目录下，即 `mountPath` 为 `/etc/doris` 。
+实际部署中，按照需要配置 `ConfigMap` 的名称以及命名空间，并将配置信息按照上述样例格式配置到需要部署的存算分离元数据管理资源中。 `MS` 服务使用的启动配置文件名称 `doris_cloud.conf` ，因此挂载启动配置的 `ConfigMap` 的 `key` 也必须是 `doris_cloud.conf` 。启动配置必须挂载到 `/etc/doris` 目录下，即 `mountPath` 为 `/etc/doris` 。
 
 !!! tip
 
