--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.4 Doris on AWS.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.4 Doris on AWS.md
@@ -62,7 +62,7 @@
 
     * `Number of Doris FE` ： `FE` 的个数，模板默认只能选择 `1` 个 `FE`
 
-    * `Fe instance type` : `FE` 的节点类型，可以采用默认值
+    * `Fe instance type` ： `FE` 的节点类型，可以采用默认值
 
     * `Number of Doris Be` ： `BE` 节点的个数，可以选择 `1` 个或者 `3` 个
 
@@ -74,7 +74,7 @@
 
     * `Volume type of Be nodes` ： `BE` 节点挂载 `EBS` 的 `volume type` ，每台节点默认挂载一块磁盘。可以使用默认值
 
-    * `Volume size of Be nodes` : `BE` 节点挂载 `EBS` 的大小，单位 `GB` ，可以使用默认值。
+    * `Volume size of Be nodes` ： `BE` 节点挂载 `EBS` 的大小，单位 `GB` ，可以使用默认值。
 
 ## 5 部署后，如何连接数据库
 
