--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.2 部署 FoundationDB.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.2 部署 FoundationDB.md
@@ -1,6 +1,6 @@
 # 1.2.3.3.2 部署 FoundationDB
 
-`FDB` 是 `Apple` 公司开发的分布式强一致性存储结构化数据的数据库。 `Doris` 存算分离模式使用 `FDB` 作为元数据存储，通过 `meta-service` 组件来管理 `FDB` 中的元数据。 `Kubernetes` 上部署存算分离集群需要提前部署 `FDB` 服务，推荐两种部署方式：在虚机(包括物理机)上直接部署; 使用 `fdb-kubernetes-operator` 部署 `FDB` 。 虚机部署请参考 Doris 存算分离官方文档部署前准备部分搭建 `FDB` 集群。部署前请确保 `FDB` 有被 `Doris` 部署的 `Kubernetes` 集群访问的能力，即 `Kubernetes` 的 `Node` 与 `FDB` 部署的机器在同一个子网。 `FDB` 官方提供 `Kubernetes` 上部署运维管理服务 `fdb-kubernetes-operator` 。
+`FDB` 是 `Apple` 公司开发的分布式强一致性存储结构化数据的数据库。 `Doris` 存算分离模式使用 `FDB` 作为元数据存储，通过 `meta-service` 组件来管理 `FDB` 中的元数据。 `Kubernetes` 上部署存算分离集群需要提前部署 `FDB` 服务，推荐两种部署方式：在虚机（包括物理机）上直接部署；使用 `fdb-kubernetes-operator` 部署 `FDB` 。虚机部署请参考 Doris 存算分离官方文档部署前准备部分搭建 `FDB` 集群。部署前请确保 `FDB` 有被 `Doris` 部署的 `Kubernetes` 集群访问的能力，即 `Kubernetes` 的 `Node` 与 `FDB` 部署的机器在同一个子网。 `FDB` 官方提供 `Kubernetes` 上部署运维管理服务 `fdb-kubernetes-operator` 。
 
 以下简述使用 `fdb-kubernetes-operator` 最新版本部署 `FDB` 使用样例。
 
@@ -27,9 +27,9 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
 
 `fdb-kubernetes-operator` 仓库提供了以 `IP` 模式部署 `FDB` 集群的部署样例。在 `doris-operator` 仓库中提供了以 `FQDN` 模式部署的 `FDB` 集群样例，可以按需下载。
 
-1. 下载部署样例:
+1. 下载部署样例：
 
-    * 从 `fdb-kubernetes-operator` 官方仓库下载:
+    * 从 `fdb-kubernetes-operator` 官方仓库下载：
 
         `fdb-kuberentes-operator` 默认情况下使用 `IP` 模式部署 `FDB Cluster` ，可以下载 `fdb-kubernetes-operator` 默认部署 `yaml` 。如果使用 `FQDN` 部署模式，请按照官方文档使用 `DNS` 部分进行定制化使用域名模式。
 
@@ -37,7 +37,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
         wget -O fdb-operator.yaml https://raw.githubusercontent.com/foundationdb/fdb-kubernetes-operator/main/config/samples/deployment.yaml
         ```
 
-    * 从 `doris-operator` 仓库下载:
+    * 从 `doris-operator` 仓库下载：
 
         `doris-operator` 仓库中制定化了以 `fdb-kuberentes-operator 1.46.0` 版本为基础的部署示例，可直接使用部署 `FDB cluster` 。
 
@@ -45,7 +45,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
         wget https://raw.githubusercontent.com/apache/doris-operator/master/config/operator/fdb-operator.yaml
         ```
 
-2. 部署 `fdb-kubernetes-operator` 服务:
+2. 部署 `fdb-kubernetes-operator` 服务：
 
     定制化 `fdb-kubernetes-operator` 的部署 `yaml` 后，使用如下命令部署 `fdb-kubernetes-operator` ：
 
@@ -53,7 +53,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
     kubectl apply -f fdb-operator.yaml
     ```
 
-    预期结果:
+    预期结果：
 
     ```shell
     serviceaccount/fdb-kubernetes-operator-controller-manager created
@@ -80,7 +80,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
 
     * 环境可访问 `dockerhub`
 
-        根据官网提供的用户手册定制化部署终态。如果使用 `FQDN` 部署，请将 `routing.useDNSInClusterFile` 字段设置为 `true` ,配置如下：
+        根据官网提供的用户手册定制化部署终态。如果使用 `FQDN` 部署，请将 `routing.useDNSInClusterFile` 字段设置为 `true` ，配置如下：
 
         `doris-operator` 的官方仓库中提供了使用 `FQDN` 部署 `FDB` 的部署样例可直接下载使用。
 
@@ -92,7 +92,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
 
     * 私网环境
 
-        在私网环境下，如果不能直接访问 `dockerhub` 可从 `FDB` 的官方仓库中将需要的镜像下载，并推到私有仓库中。 `fdb-kubernetes-operator` 依赖 `foundationdb/fdb-kubernetes-operator` , `foundationdb/foundationdb-kubernetes-sidecar` 。
+        在私网环境下，如果不能直接访问 `dockerhub` 可从 `FDB` 的官方仓库中将需要的镜像下载，并推到私有仓库中。 `fdb-kubernetes-operator` 依赖 `foundationdb/fdb-kubernetes-operator` ， `foundationdb/foundationdb-kubernetes-sidecar` 。
 
         部署 `FDB` 依赖的镜像包括： `foundationdb/foundationdb` ， `foundationdb/foundationdb-kubernetes-sidecar` 。
 
@@ -117,7 +117,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
 
     * 私有环境下， `FDB` 推到私有仓库时， `tag` 必须与官方保持一致，比如： `7.1.38` 。
     
-    * 部署 `FDB` 时, `FoundationDBCluster` 资源， `.spec.version` 必须配置。
+    * 部署 `FDB` 时， `FoundationDBCluster` 资源， `.spec.version` 必须配置。
     
     * `FDB` 基于 `fdb-kubernetes-operator` 部署，至少需要三个宿主机才可满足生产环境高可用要求。
 
@@ -129,7 +129,7 @@ customresourcedefinition.apiextensions.k8s.io/foundationdbrestores.apps.foundati
 kubectl get fdb
 ```
 
-预期结果如下，若 `AVAILABLE` 为 `true` 则代表集群可用:
+预期结果如下，若 `AVAILABLE` 为 `true` 则代表集群可用：
 
 ```shell
 NAME           GENERATION   RECONCILED   AVAILABLE   FULLREPLICATION   VERSION   AGE
