--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.2 基于 Arrow Flight SQL 的高速数据传输链路.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.2 基于 Arrow Flight SQL 的高速数据传输链路.md
@@ -1,9 +1,5 @@
 # 2.2 基于 Arrow Flight SQL 的高速数据传输链路
 
-!!! tip
-
-    since 2.1
-
 `Doris` 基于 `Arrow Flight SQL` 协议实现了高速数据链路，支持多种语言使用 `SQL` 从 `Doris` 高速读取大批量数据。
 
 ## 1 用途
@@ -18,7 +14,7 @@
 
 ## 2 Python 使用方法
 
-使用 `Python` 的 `ADBC Driver` 连接 `Doris` 实现数据的极速读取，下面的步骤使用 `Python`（版本 `>= 3.9` ）的 `ADBC Driver` 执行一系列常见的数据库语法操作，包括 `DDL` 、 `DML` 、设置 `Session` 变量以及 `Show` 语句等。
+使用 `Python` 的 `ADBC Driver` 连接 `Doris` 实现数据的极速读取，下面的步骤使用 `Python` （版本 `>= 3.9` ）的 `ADBC Driver` 执行一系列常见的数据库语法操作，包括 `DDL` 、 `DML` 、设置 `Session` 变量以及 `Show` 语句等。
 
 ### 2.1 安装 Library
 
@@ -29,7 +25,7 @@ pip install adbc_driver_manager
 pip install adbc_driver_flightsql
 ```
 
-在代码中 `import` 以下模块/库来使用已安装的 `Library` ：
+在代码中 `import` 以下模块、库来使用已安装的 `Library` ：
 
 ```python
 import adbc_driver_manager
@@ -43,7 +39,7 @@ import adbc_driver_flightsql.dbapi as flight_sql
 
 ### 2.2 连接 Doris
 
-创建与 `Doris Arrow Flight SQL` 服务交互的客户端。需提供 `Doris FE` 的 `Host` 、 `Arrow Flight Port` 、登陆用户名以及密码，并进行以下配置。 修改 `Doris FE` 和 `BE` 的配置参数：
+创建与 `Doris Arrow Flight SQL` 服务交互的客户端。需提供 `Doris FE` 的 `Host` 、 `Arrow Flight Port` 、登陆用户名以及密码，并进行以下配置。修改 `Doris FE` 和 `BE` 的配置参数：
 
 * 修改 `fe/conf/fe.conf` 中 `arrow_flight_sql_port` 为一个可用端口，如 `9090` 。
 
@@ -51,9 +47,9 @@ import adbc_driver_flightsql.dbapi as flight_sql
 
 !!! tip
 
-    注: `fe.conf` 与 `be.conf` 中配置的 `arrow_flight_sql_port` 不相同
+    注： `fe.conf` 与 `be.conf` 中配置的 `arrow_flight_sql_port` 不相同
 
-假设 `Doris` 实例中 `FE` 和 `BE` 的 `Arrow Flight SQL` 服务将分别在端口 `9090` 和 `9091` 上运行，且 `Doris` 用户名/密码为 `“user”/“pass”` ，那么连接过程如下所示：
+假设 `Doris` 实例中 `FE` 和 `BE` 的 `Arrow Flight SQL` 服务将分别在端口 `9090` 和 `9091` 上运行，且 `Doris` 用户名、密码为 `"user"` 、 `"pass"` ，那么连接过程如下所示：
 
 ```python
 conn = flight_sql.connect(uri="grpc://{FE_HOST}:{fe.conf:arrow_flight_sql_port}", db_kwargs={
@@ -261,7 +257,7 @@ cursor.close()
 
 `Arrow Flight SQL` 协议的开源 `JDBC` 驱动兼容标准的 `JDBC API` ，可用于大多数 `BI` 工具通过 `JDBC` 访问 `Doris` ，并支持高速传输 `Apache Arrow` 数据。使用方法与通过 `MySQL` 协议的 `JDBC` 驱动连接 `Doris` 类似，只需将链接 `URL` 中的 `jdbc:mysql` 协议换成 `jdbc:arrow-flight-sql` 协议，查询返回的结果依然是 `JDBC` 的 `ResultSet` 数据结构。
 
-**POM dependency**:
+**POM dependency**：
 
 ```xml
 <properties>
@@ -287,7 +283,7 @@ $ env _JAVA_OPTIONS="--add-opens=java.base/java.nio=org.apache.arrow.memory.core
 
 否则，您可能会看到一些错误，如 `module java.base does not "opens java.nio" to unnamed module 或者 module java.base does not "opens java.nio" to org.apache.arrow.memory.core` 或者 `ava.lang.NoClassDefFoundError: Could not initialize class org.apache.arrow.memory.util.MemoryUtil (Internal; Prepare)`
 
-如果您在 `IntelliJ IDEA` 中调试，需要在 `Run/Debug Configurations` 的 `Build and run` 中增加 `--add-opens=java.base/java.nio=ALL-UNNAMED` ，参照下面的图片:
+如果您在 `IntelliJ IDEA` 中调试，需要在 `Run/Debug Configurations` 的 `Build and run` 中增加 `--add-opens=java.base/java.nio=ALL-UNNAMED` ，参照下面的图片：
 
 ![](../../../../assets/images/Doris/352802982-7439ee6d-9013-40bf-89af-0365925d3fdb.png)
 
@@ -321,7 +317,7 @@ conn.close();
 
 除了使用 `JDBC` ，与 `Python` 类似， `Java` 也可以创建 `Driver` 读取 `Doris` 并返回 `Arrow` 格式的数据，下面分别是使用 `AdbcDriver` 和 `JdbcDriver` 连接 `Doris Arrow Flight Server` 。
 
-**POM dependency**:
+**POM dependency**：
 
 ```xml
 <properties>
@@ -450,7 +446,7 @@ try (
 
 ### 5.1 Spark & Flink
 
-`Arrow Flight` 官方目前没有支持 `Spark` 和 `Flink` 的计划（见 `GitHub Issue` ），[Doris Spark Connector](https://github.com/apache/doris-spark-connector) 和 `Doris Flink Connector` 目前还不支持通过 `Arrow Flight SQL` 访问 `Doris` 。其中 `Doris Flink Connector` 支持 `Arrow Flight SQL` 正在开发中，预期能提升数倍读取性能。
+`Arrow Flight` 官方目前没有支持 `Spark` 和 `Flink` 的计划（见 `GitHub Issue` ），[Doris Spark Connector](https://github.com/apache/doris-spark-connector)和 `Doris Flink Connector` 目前还不支持通过 `Arrow Flight SQL` 访问 `Doris` 。其中 `Doris Flink Connector` 支持 `Arrow Flight SQL` 正在开发中，预期能提升数倍读取性能。
 
 社区之前参考开源的 `Spark-Flight-Connector` ），在 `Spark` 中使用 `FlightClient` 连接 `Doris` 测试，发现 `Arrow` 与 `Doris Block` 之间数据格式转换的速度更快，是 `CSV` 格式与 `Doris Block` 之间转换速度的 `10` 倍，而且对 `Map` ， `Array` 等复杂类型的支持更好，这是因为 `Arrow` 数据格式的压缩率高，传输时网络开销小。不过目前 `Doris Arrow Flight` 还没有实现多节点并行读取，仍是将查询结果汇总到一台 `BE` 节点后返回，对简单的批量导出数据而言，性能可能没有 `Doris Spark Connector` 快，后者支持 `Tablet` 级别的并行读取。如果你希望在 `Spark` 使用 `Arrow Flight SQL` 连接 `Doris` ，可以参考开源的 `Spark-Flight-Connector` 和 `Dremio-Flight-Connector` 自行实现。
 
@@ -458,22 +454,22 @@ try (
 
 1. `ARM` 环境报错 `get flight info statement failed, arrow flight schema timeout, TimeoutException: Waited 5000 milliseconds for io.grpc.stub.Client` ，如果 `Linux` 内核版本 `<= 4.19.90` ，需要升级到 `4.19.279` 及以上，或者在低版本 `Linux` 内核的环境中重新编译 `Doris BE`
 
-    问题原因：这是因为老版本 `Linux` 内核和 `Arrow` 存在兼容性问题，`cpp: arrow::RecordBatch::MakeEmpty()` 构造 `Arrow Record Batch` 时会卡住，导致 `Doris BE` 的 `Arrow Flight Server` 在 `5000ms` 内没有回应 `Doris FE` 的 `Arrow Flight Server` 的 `RPC` 请求，导致 `FE` 给 `Client` 返回 `rpc timeout failed` 。 `Spark` 和 `Flink` 读取 `Doris` 时也是将查询结果转换成 `Arrow Record Batch` 后返回，所以也存在同样的问题。
+    问题原因：这是因为老版本 `Linux` 内核和 `Arrow` 存在兼容性问题， `cpp: arrow::RecordBatch::MakeEmpty()` 构造 `Arrow Record Batch` 时会卡住，导致 `Doris BE` 的 `Arrow Flight Server` 在 `5000ms` 内没有回应 `Doris FE` 的 `Arrow Flight Server` 的 `RPC` 请求，导致 `FE` 给 `Client` 返回 `rpc timeout failed` 。 `Spark` 和 `Flink` 读取 `Doris` 时也是将查询结果转换成 `Arrow Record Batch` 后返回，所以也存在同样的问题。
 
     `kylinv10 SP2` 和 `SP3` 的 `Linux` 内核版本最高只有 `4.19.90-24.4.v2101.ky10.aarch64` ，无法继续升级内核版本，只能在 `kylinv10` 上重新编译 `Doris BE` ，如果使用新版本 `ldb_toolchain` 编译 `Doris BE` 后问题依然存在，可以尝试使用低版本 `ldb_toolchain v0.17` 编译，如果你的 `ARM` 环境无法连外网，华为云提供 `ARM + kylinv10` ，阿里云提供 `x86 + kylinv10`
 
-2. 目前 `jdbc:arrow-flight-sql` 和 `Java ADBC/JDBCDriver` 不支持 `prepared statement` 传递参数，类似 `select * from xxx where id=?` ，将报错 `parameter ordinal 1 out of range` ，这是 `Arrow Flight SQL` 的一个 `BUG（GitHub Issue）`
+2. 目前 `jdbc:arrow-flight-sql` 和 `Java ADBC/JDBCDriver` 不支持 `prepared statement` 传递参数，类似 `select * from xxx where id=?` ，将报错 `parameter ordinal 1 out of range` ，这是 `Arrow Flight SQL` 的一个 `BUG(GitHub Issue)`
 
 3. 修改 `jdbc:arrow-flight-sql` 每次读取的批次大小，在某些场景下可以提升性能，通过修改 `org.apache.arrow.adbc.driver.jdbc.JdbcArrowReader` 文件中 `makeJdbcConfig` 方法中的 `setTargetBatchSize` ，默认是 `1024` ，然后将修改后的文件保存到本地同名路径目录下，从而覆盖原文件生效。
 
-4. `ADBC v0.10，JDBC` 和 `Java ADBC/JDBCDriver` 还不支持并行读取，没有实现 `stmt.executePartitioned()` 这个方法，只能使用原生的 `FlightClient` 实现并行读取多个 `Endpoints` , 使用方法 `sqlClient=new FlightSqlClient, execute=sqlClient.execute(sql), endpoints=execute.getEndpoints(), for(FlightEndpoint endpoint: endpoints)` ，此外， `ADBC V0.10` 默认的 `AdbcStatement` 实际是 `JdbcStatement` ， `executeQuery` 后将行存格式的 `JDBC ResultSet` 又重新转成的 `Arrow` 列存格式，预期到 `ADBC 1.0.0` 时 `Java ADBC` 将功能完善 `GitHub Issue` 。
+4. `ADBC v0.10,JDBC` 和 `Java ADBC/JDBCDriver` 还不支持并行读取，没有实现 `stmt.executePartitioned()` 这个方法，只能使用原生的 `FlightClient` 实现并行读取多个 `Endpoints` ，使用方法 `sqlClient=new FlightSqlClient, execute=sqlClient.execute(sql), endpoints=execute.getEndpoints(), for(FlightEndpoint endpoint: endpoints)` ，此外， `ADBC V0.10` 默认的 `AdbcStatement` 实际是 `JdbcStatement` ， `executeQuery` 后将行存格式的 `JDBC ResultSet` 又重新转成的 `Arrow` 列存格式，预期到 `ADBC 1.0.0` 时 `Java ADBC` 将功能完善 `GitHub Issue` 。
 
-5. 截止 `Arrow v15.0，Arrow JDBC Connector` 不支持在 `URL` 中指定 `database name` ，比如 `jdbc:arrow-flight-sql://{FE_HOST}:{fe.conf:arrow_flight_sql_port}/test?useServerPrepStmts=false` 中指定连接 `test database` 无效，只能手动执行 `SQL` `use database` 。
+5. 截止 `Arrow v15.0,Arrow JDBC Connector` 不支持在 `URL` 中指定 `database name` ，比如 `jdbc:arrow-flight-sql://{FE_HOST}:{fe.conf:arrow_flight_sql_port}/test?useServerPrepStmts=false` 中指定连接 `test database` 无效，只能手动执行 `SQL` `use database` 。
 
 6. `Doris 2.1.4 version` 存在一个 `Bug` ，读取大数据量时有几率报错，在 `Fix arrow flight result sink #36827` 这个 `pr` 修复，升级 `Doris 2.1.5 version` 可以解决。问题详情见： `Questions`
 
 7. `Warning: Cannot disable autocommit; conn will not be DB-API 2.0 compliant` 使用 `Python` 时忽略这个 `Warning` ，这是 `Python ADBC Client` 的问题，这不会影响查询。
 
-8. `Python` 报错 `grpc: received message larger than max (20748753 vs. 16777216)` ，参考 `Python: grpc: received message larger than max (20748753 vs. 16777216) #2078` 在 `Database Option` 中增加 `adbc_driver_flightsql.DatabaseOptions.WITH_MAX_MSG_SIZE.value` .
+8. `Python` 报错 `grpc: received message larger than max (20748753 vs. 16777216)` ，参考 `Python: grpc: received message larger than max (20748753 vs. 16777216) #2078` 在 `Database Option` 中增加 `adbc_driver_flightsql.DatabaseOptions.WITH_MAX_MSG_SIZE.value` 。
 
 9. `Doris version 2.1.7` 版本之前，报错 `Reach limit of connections` ，这是因为没有限制单个用户的 `Arrow Flight` 连接数小于 `UserProperty` 中的 `max_user_connections` ，默认 `100` ，可以通过 `SET PROPERTY FOR 'Billie' 'max_user_connections' = '1000';` 修改 `Billie` 用户的当前最大连接数到 `100` ，或者在 `fe.conf` 中增加 `arrow_flight_token_cache_size=50` 来限制整体的 `Arrow Flight` 连接数。 `Doris version 2.1.7` 版本之前 `Arrow Flight` 连接默认 `3` 天超时断开，只强制连接数小于 `qe_max_connection/2` ，超过时依据 `lru` 淘汰， `qe_max_connection` 是 `fe` 所有用户的总连接数，默认 `1024` 。具体可以看 `arrow_flight_token_cache_size` 这个 `conf` 的介绍。在 `Fix exceed user property max connection cause Reach limit of connections #39127` 修复，问题详情见： `Questions`
