--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.1 数据库连接.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.1 数据库连接.md
@@ -71,7 +71,7 @@ try {
 
 `Doris FE` 内置 `Web UI` 。用户无须安装 `MySQL` 客户端，即可通过内置的 `Web UI` 进行 `SQL` 查询和其它相关信息的查看。
 
-在浏览器中输入 `http://fe_ip:fe_port` , 比如 `http://172.20.63.118:8030` ，打开 `Doris` 内置的 `Web` 控制台。
+在浏览器中输入 `http://fe_ip:fe_port` ，比如 `http://172.20.63.118:8030` ，打开 `Doris` 内置的 `Web` 控制台。
 
 内置 `Web` 控制台，主要供集群 `root` 账户使用，默认安装后 `root` 账户密码为空。
 
@@ -87,6 +87,6 @@ ALTER SYSTEM ADD BACKEND "be_host_ip:heartbeat_service_port";
 
 !!! warning
 
-    `Playground` 中执行这种和具体数据库/表没有关系的语句，务必在左侧库栏里随意选择一个数据库，才能执行成功，这个限制，稍后会去掉。
+    `Playground` 中执行这种和具体数据库表没有关系的语句，务必在左侧库栏里随意选择一个数据库，才能执行成功，这个限制，稍后会去掉。
 
     当前内置的 `Web` 控制台，还不能执行 `SET` 类型的 `SQL` 语句，所以，在 `Web` 控制台，当前还不能通过执行 `SET PASSWORD FOR 'user' = PASSWORD('user_password')` 类似语句。
