--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.1 概览.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.1 概览.md
@@ -20,4 +20,4 @@
 
 3. 加减 `VALUE` 列是轻量级实现，秒级别可以完成，加减 `KEY` 列或者修改数据类型是重量级操作，完成时间取决于数据量，大规模数据下尽量避免加减 `KEY` 列或者修改数据类型。
 
-4. 可以使用层级存储将冷数据保存到 `HDD` 或者 `S3` / `HDFS` 。
+4. 可以使用层级存储将冷数据保存到 `HDD` 、 `S3` 或者 `HDFS` 。
