--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.4 BloomFilter 索引.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.4 BloomFilter 索引.md
@@ -4,7 +4,7 @@
 
 `BloomFilter` 索引是基于 `BloomFilter` 的一种跳数索引。它的原理是利用 `BloomFilter` 跳过等值查询指定条件不满足的数据块，达到减少 `I/O` 查询加速的目的。
 
-`BloomFilter` 是由 `Bloom` 在 `1970` 年提出的一种多哈希函数映射的快速查找算法。通常应用在一些需要快速判断某个元素是否属于集合，但是并不严格要求 `100%` `正确的场合，BloomFilter` 有以下特点：
+`BloomFilter` 是由 `Bloom` 在 `1970` 年提出的一种多哈希函数映射的快速查找算法。通常应用在一些需要快速判断某个元素是否属于集合，但是并不严格要求 `100%` 正确的场合， `BloomFilter` 有以下特点：
 
 * 空间效率高的概率型数据结构，用来检查一个元素是否在一个集合中。
 
@@ -12,7 +12,7 @@
 
 `BloomFilter` 是由一个超长的二进制位数组和一系列的哈希函数组成。二进制位数组初始全部为 `0` ，当给定一个待查询的元素时，这个元素会被一系列哈希函数计算映射出一系列的值，所有的值在位数组的偏移量处置为 `1` 。
 
-下图所示出一个 `m=18, k=3` （ `m` 是该 `Bit` 数组的大小， `k` 是 `Hash` 函数的个数）的 `BloomFilter` 示例。集合中的 `x、y、z` 三个元素通过 `3` 个不同的哈希函数散列到位数组中。当查询元素 `w` 时，通过 `Hash` 函数计算之后只要有一个位为 `0` ，因此 `w` 不在该集合中。但是反过来全部都是 `1` 只能说明可能在集合中、不能肯定一定在集合中，因为 `Hash` 函数可能出现 `Hash` 碰撞。
+下图所示出一个 `m=18, k=3` （ `m` 是该 `Bit` 数组的大小， `k` 是 `Hash` 函数的个数）的 `BloomFilter` 示例。集合中的 `x,y,z` 三个元素通过 `3` 个不同的哈希函数散列到位数组中。当查询元素 `w` 时，通过 `Hash` 函数计算之后只要有一个位为 `0` ，因此 `w` 不在该集合中。但是反过来全部都是 `1` 只能说明可能在集合中、不能肯定一定在集合中，因为 `Hash` 函数可能出现 `Hash` 碰撞。
 
 ![](../../../../../assets/images/Doris/Bloom_filter.svg-e437ea5c65c96143c00cdb97711e1b10.png)
 
@@ -28,7 +28,7 @@
 
     `BloomFilter` 的使用有下面一些限制：
 
-    * 对 `IN` 和 `=` 之外的查询没有效果，比如 `!=` , `NOT INT` , `>` , `<` 等
+    * 对 `IN` 和 `=` 之外的查询没有效果，比如 `!=` ， `NOT INT` ， `>` ， `<` 等
 
     * 不支持对 `Tinyint` 、 `Float` 、 `Double` 类型的列建 `BloomFilter` 索引。
 
@@ -80,7 +80,7 @@ ALTER TABLE table_name SET ("bloom_filter_columns" = "column_name2,column_name3"
 
 ### 4.1 创建 BloomFilter 索引
 
-`Doris BloomFilter` 索引的创建是通过在建表语句的 `PROPERTIES` 里加上 `"bloom_filter_columns"="k1,k2,k3"` , 这个属性， `k1,k2,k3` 是要创建的 `BloomFilter` 索引的 `Key` 列名称，例如下面对表里的 `saler_id,category_id` 创建了 `BloomFilter` 索引。
+`Doris BloomFilter` 索引的创建是通过在建表语句的 `PROPERTIES` 里加上 `"bloom_filter_columns"="k1,k2,k3"` ，这个属性， `k1,k2,k3` 是要创建的 `BloomFilter` 索引的 `Key` 列名称，例如下面对表里的 `saler_id,category_id` 创建了 `BloomFilter` 索引。
 
 ```sql
 CREATE TABLE IF NOT EXISTS sale_detail_bloom  (
