--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
@@ -4,7 +4,7 @@
 
 !!! tip
 
-    `Doris` 数据表模型上目前分为三类： `DUPLICATE KEY` , `UNIQUE KEY` , `AGGREGATE KEY` 。
+    `Doris` 数据表模型上目前分为三类： `DUPLICATE KEY` ， `UNIQUE KEY` ， `AGGREGATE KEY` 。
 
 !!! tip
 
@@ -98,7 +98,7 @@ DISTRIBUTED BY HASH(siteid) BUCKETS 10;
 
 ### 1.3 UNIQUE KEY 表模型
 
-`UNIQUE KEY` 相同时，新记录覆盖旧记录。在 `1.2` 版本之前，`UNIQUE KEY` 实现上和 `AGGREGATE KEY` 的 `REPLACE` 聚合方法一样，二者本质上相同，自 `1.2` 版本我们给 `UNIQUE KEY` 引入了 `merge on write` 实现，该实现有更好的聚合查询性能。
+`UNIQUE KEY` 相同时，新记录覆盖旧记录。在 `1.2` 版本之前， `UNIQUE KEY` 实现上和 `AGGREGATE KEY` 的 `REPLACE` 聚合方法一样，二者本质上相同，自 `1.2` 版本我们给 `UNIQUE KEY` 引入了 `merge on write` 实现，该实现有更好的聚合查询性能。
 
 适用于有更新需求的分析业务：
 
@@ -143,7 +143,7 @@ DISTRIBUTED BY HASH(orderid) BUCKETS 10;
 
     1. 建表时，正确的选择列顺序，能够极大地提高查询效率。
     
-        因为建表时已经指定了列顺序，所以一个表只有一种前缀索引。这对于使用其他不能命中前缀索引的列作为条件进行的查询来说，效率上可能无法满足需求，这种情况，我们可以通过> 创建物化视图来人为的调整列顺序。
+        因为建表时已经指定了列顺序，所以一个表只有一种前缀索引。这对于使用其他不能命中前缀索引的列作为条件进行的查询来说，效率上可能无法满足需求，这种情况，我们可以通过创建物化视图来人为的调整列顺序。
 
     2. 前缀索引的第一个字段一定是最常查询的字段，并且需要是高基数字段：
 
@@ -151,7 +151,7 @@ DISTRIBUTED BY HASH(orderid) BUCKETS 10;
 
         * `Int(4)+ Int(4) + varchar(50)` ，前缀索引长度只有 `28`
 
-        * `Int(4) + varchar(50) + Int(4)`，前缀索引长度只有 `24`
+        * `Int(4) + varchar(50) + Int(4)` ，前缀索引长度只有 `24`
 
         * `varchar(10) + varchar(50)` ，前缀索引长度只有 `30`
 
@@ -257,7 +257,7 @@ PROPERTIES (
 
         * 查询会根据该列高频过滤，而且查询条件大多是 `in` 和 `=` 过滤
 
-        * 不同于 `Bitmap` , `BloomFilter` 适用于高基数列。比如 `UserID` 。因为如果创建在低基数的列上，比如“性别”列，则每个 `Block` 几乎都会包含所有取值，导致 `BloomFilter` 索引失去意义
+        * 不同于 `Bitmap` ， `BloomFilter` 适用于高基数列。比如 `UserID` 。因为如果创建在低基数的列上，比如“性别”列，则每个 `Block` 几乎都会包含所有取值，导致 `BloomFilter` 索引失去意义
 
         * 数据基数在一半左右
 
@@ -346,7 +346,7 @@ USING BITMAP COMMENT 'bitmap_siteid';
 
     5. `Bitmap` 索引必须在一定基数范围内构建，太高或者太低的基数都不合适
 
-        * 适用于低基数的列上，建议在 `100` 到 `100,000` 之间，如：职业、地市等。重复度过高则对比其他类型索引没有明显优势；重复度过低，则空间效率和性能会大大降低。特定类型的> 查询例如 `COUNT` , `OR` , `AND` 等逻辑操作因为只需要进行位运算
+        * 适用于低基数的列上，建议在 `100` 到 `100,000` 之间，如：职业、地市等。重复度过高则对比其他类型索引没有明显优势；重复度过低，则空间效率和性能会大大降低。特定类型的查询例如 `COUNT` ， `OR` ， `AND` 等逻辑操作因为只需要进行位运算
 
         * 该索引更多的适合正交查询
 
@@ -488,7 +488,7 @@ show partitions from tbl_unique_merge_on_write_p;
         
         * 数据随机分桶：
             
-            * 如果 `OLAP` 表没有更新类型的字段，将表的数据分桶模式设置为 `RANDOM` ，则可以避免严重的数据倾斜 （数据在导入表对应的分区的时候，单次导入作业每个 `Batch` 的数据将随机选择一个 `Tablet` 进行写入）。
+            * 如果 `OLAP` 表没有更新类型的字段，将表的数据分桶模式设置为 `RANDOM` ，则可以避免严重的数据倾斜（数据在导入表对应的分区的时候，单次导入作业每个 `Batch` 的数据将随机选择一个 `Tablet` 进行写入）。
             
             * 当表的分桶模式被设置为 `RANDOM` 时，因为没有分桶列，无法根据分桶列的值仅对几个分桶查询，对表进行查询的时候将对命中分区的全部分桶同时扫描，该设置适合对表数据整体的聚合查询分析而不适合高并发的点查询。
             
@@ -500,7 +500,7 @@ show partitions from tbl_unique_merge_on_write_p;
     
     5. 对于有大量历史分区数据，但是历史数据比较少，或者不均衡，或者查询概率的情况，使用如下方式将数据放在特殊分区。
     
-        对于历史数据，如果数据量比较小我们可以创建历史分区（比如年分区，月分区），将所有历史数据放到对应分区里创建历史分区方式例如：`FROM ("2000-01-01") TO ("2022-01-01") INTERVAL 1 YEAR` ，具体参考：
+        对于历史数据，如果数据量比较小我们可以创建历史分区（比如年分区，月分区），将所有历史数据放到对应分区里创建历史分区方式例如： `FROM ("2000-01-01") TO ("2022-01-01") INTERVAL 1 YEAR` ，具体参考：
 
         ```sql
         ( 
