--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.1 索引概述.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.1 索引概述.md
@@ -1,6 +1,6 @@
 # 3.3.1 索引概述
 
-数据库索引是用于查询加速的，为了加速不同的查询场景，`Apache Doris` 支持了多种丰富的索引。
+数据库索引是用于查询加速的，为了加速不同的查询场景， `Apache Doris` 支持了多种丰富的索引。
 
 ## 1 索引分类和原理
 
@@ -51,7 +51,7 @@
 
 ## 2 索引设计指南
 
-数据库表的索引设计和优化跟数据特点和查询很相关，需要根据实际场景测试和优化。虽然没有 "银弹"， `Apache Doris` 仍然不断努力降低用户使用索引的难度，用户可以根据下面的简单建议原则进行索引选择和测试。
+数据库表的索引设计和优化跟数据特点和查询很相关，需要根据实际场景测试和优化。虽然没有“银弹”， `Apache Doris` 仍然不断努力降低用户使用索引的难度，用户可以根据下面的简单建议原则进行索引选择和测试。
 
 1. 最频繁使用的过滤条件指定为 `Key` 自动建前缀索引，因为它的过滤效果最好，但是一个表只能有一个前缀索引，因此要用在最频繁的过滤条件上
 
