--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.3 倒排索引.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.3 倒排索引.md
@@ -2,7 +2,7 @@
 
 ## 1 索引原理
 
-倒排索引，是信息检索领域常用的索引技术，将文本分成一个个词，构建词 -> 文档编号的索引，可以快速查找一个词在哪些文档出现。
+倒排索引，是信息检索领域常用的索引技术，将文本分成一个个词，构建词到文档编号的索引，可以快速查找一个词在哪些文档出现。
 
 从 `2.0.0` 版本开始， `Doris` 支持倒排索引，可以用来进行文本类型的全文检索、普通数值日期类型的等值范围查询，快速从海量数据中过滤出满足条件的行。
 
@@ -24,7 +24,7 @@
 
         * 支持指定词距 `slop`
 
-        * 支持短语+前缀 `MATCH_PHRASE_PREFIX`
+        * 支持短语加前缀 `MATCH_PHRASE_PREFIX`
 
     * 支持分词正则查询 `MATCH_REGEXP`
 
@@ -32,9 +32,9 @@
 
 2. 加速普通等值、范围查询，覆盖原来 `BITMAP` 索引的功能，代替 `BITMAP` 索引
 
-    * 支持字符串、数值、日期时间类型的 `=` , `!=` , `>` , `>=` , `<` , `<=` 快速过滤
+    * 支持字符串、数值、日期时间类型的 `=` ， `!=` ， `>` ， `>=` ， `<` ， `<=` 快速过滤
 
-    * 支持字符串、数字、日期时间数组类型的 `=` , `!=` , `>` , `>=` , `<` , `<=`
+    * 支持字符串、数字、日期时间数组类型的 `=` ， `!=` ， `>` ， `>=` ， `<` ， `<=`
 
 3. 支持完善的逻辑组合
 
@@ -90,7 +90,7 @@ table_properties;
 
 语法说明如下：
 
-1. `idx_column_name(column_name)` 是必须的，`column_name` 是建索引的列名，必须是前面列定义中出现过的，`idx_column_name` 是索引名字，必须表级别唯一，建议命名规范：列名前面加前缀 `idx_`
+1. `idx_column_name(column_name)` 是必须的， `column_name` 是建索引的列名，必须是前面列定义中出现过的， `idx_column_name` 是索引名字，必须表级别唯一，建议命名规范：列名前面加前缀 `idx_`
 
 2. `USING INVERTED` 是必须的，用于指定索引类型是倒排索引
 
@@ -112,9 +112,9 @@ table_properties;
 
         用于指定分词的模式，目前 `parser = chinese` 时支持如下几种模式：
 
-        * `fine_grained` ：细粒度模式，倾向于分出比较短、较多的词，比如 '武汉市长江大桥' 会分成 '武汉', '武汉市', '市长', '长江', '长江大桥', '大桥' `6` 个词
+        * `fine_grained` ：细粒度模式，倾向于分出比较短、较多的词，比如‘武汉市长江大桥’会分成‘武汉’，‘武汉市’，‘市长’，‘长江’，‘长江大桥’，‘大桥’ `6` 个词
 
-        * `coarse_grained` ：粗粒度模式，倾向于分出比较长、较少的词，，比如 '武汉市长江大桥' 会分成 '武汉市' '长江大桥' `2` 个词
+        * `coarse_grained` ：粗粒度模式，倾向于分出比较长、较少的词，比如‘武汉市长江大桥’会分成‘武汉市’，‘长江大桥’ `2` 个词
 
         * 默认 `coarse_grained`
 
@@ -164,7 +164,7 @@ table_properties;
 
         是否将分词进行小写转换，从而在匹配的时候实现忽略大小写
 
-        * `true` : 转换小写
+        * `true` ：转换小写
 
         * `false` ：不转换小写
 
@@ -174,9 +174,9 @@ table_properties;
 
         指明使用的停用词表，会影响分词器的行为
 
-        默认的内置停用词表包含一些无意义的词：'is'、'the'、'a' 等。在写入或者查询时，分词器会忽略停用词表中的词。
+        默认的内置停用词表包含一些无意义的词： `is` 、 `the` 、 `a` 等。在写入或者查询时，分词器会忽略停用词表中的词。
 
-        * `none` : 使用空的停用词表
+        * `none` ：使用空的停用词表
 
 4. `COMMENT` 是可选的，用于指定索引注释
 
@@ -229,7 +229,7 @@ table_properties;
 
     1. 一个 `tablet` 的多数副本 `BUILD INDEX` 失败后，整个 `BUILD INDEX` 失败结束
 
-    2. 时间超过 `alter_table_timeout_second ()` ，`BUILD INDEX` 超时结束
+    2. 时间超过 `alter_table_timeout_second()` ， `BUILD INDEX` 超时结束
 
     3. 用户可以多次触发 `BUILD INDEX` ，已经 `BUILD` 成功的索引不会重复 `BUILD`
 
@@ -428,7 +428,7 @@ mysql> SELECT count() FROM hackernews_1m;
 
 1. 全文检索
 
-    * 用 `LIKE` 匹配计算 `comment` 中含有 'OLAP' 的行数，耗时 `0.18s`
+    * 用 `LIKE` 匹配计算 `comment` 中含有 `OLAP` 的行数，耗时 `0.18s`
 
         ```sql
         mysql> SELECT count() FROM hackernews_1m WHERE comment LIKE '%OLAP%';
